# text_based_engine

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  command_doc.txt  database_structures.txt  root.txt  table_signatures.txt
demos/: test.db
demos/demo_0/: config.json  interactions.db
doxygen/: Doxyfile
python_simulations/: simulation_0.py  simulation_core.py
src/: CMakeLists.txt  actor.h  ask_question.cpp  ask_question.h  database_structure.h  engine.cpp  engine.h  full_wrapper.cpp  full_wrapper.h  main.cpp  makefile  option.h  response.h  sql_query.cpp  sql_query.h  text_based_engine
src/dependencies/com/: string_ref.h
src/dependencies/dep/: basic_dynamic_ptr.h  basic_immutable_value.h  check_file_exists.cpp  check_file_exists.h  const_value_key.h  current_milliseconds.cpp  current_milliseconds.h  enum_class_hash.h  format_string.cpp  format_string.h  input_manager.cpp  input_manager.h  is_int.cpp  is_int.h  load_to_string.cpp  load_to_string.h  of_dynamic.h  of_static.h  print_line.h  ptr_to_string.h  sleep_event.h  string_formatter.cpp  string_formatter.h  to_underlying_value.h  type_value_pair.h  value_key.h  wait.cpp  wait.h
src/engine/: CMakeLists.txt  argument.cpp  argument.h  ask_question.cpp  ask_question.h  basic_command_processor.h  command.cpp  command.h  command_execution_info.h  command_processor.cpp  command_processor.h  database_structure.h  engine.cpp  engine.h  game_state.cpp  game_state.h  game_state_map.cpp  game_state_map.h  item_scope.cpp  item_scope.h  parameter_list.h  print_line_debug.h  run_info.cpp  run_info.h  variable_map.h
src/engine/commands/: commands.h
src/engine/dev_tools/: command.cpp  command.h  command_processor.cpp  command_processor.h  game_state.h  game_state_map.cpp  game_state_map.h  item_scope.cpp  item_scope.h  parameter_list.h  run_info.cpp  run_info.h  state_map.cpp  state_map.h
src/engine/dev_tools/argument/: argument_base.cpp  argument_base.h  argument_ptr.h  argument_type_id.h  argument_types.h  basic_argument.h  underlying_type.h
src/engine/dev_tools/argument/common/: argument_list.h  object.h  option.h
src/engine/dev_tools/commands/: basic_command.h  command_base.cpp  command_base.h  command_id.h  command_ptr.h  commands.cpp  commands.h  kind.h
src/engine/dev_tools/commands/common/: list_paths.cpp  list_paths.h  set.cpp  set.h
src/engine/dev_tools/types/: basic_object.h  dynamic_variable.cpp  dynamic_variable.h  kind.h  match_to_type_id.h  object_base.cpp  object_base.h  object_ptr.h  type_base.cpp  type_base.h  type_id.h  type_ptr.h  types.h
src/engine/dev_tools/types/common/: basic_object.h  basic_type.h  bool.h  include.h  int.h  object_list.h  string.h  text.h  var_list.h
src/sql_helpers/: column_info.cpp  column_info.h  column_list.cpp  column_list.h  column_list_id.h  database_structure.h  dynamic_query.cpp  dynamic_query.h  dynamic_type.cpp  dynamic_type.h  generic_query.cpp  generic_query.h  mapped_query.cpp  mapped_query.h  object.h  object_core.cpp  object_core.h  query.cpp  query.h  query_data.cpp  query_data.h  query_object.cpp  query_object.h  query_result.h  select_clause.h  select_statement.cpp  select_statement.h  table_set.cpp  table_set.h  template_query.cpp  template_query.h  var_list.h  where_clause.cpp  where_clause.h
src/sql_helpers/objects/: actor.cpp  actor.h  include.h  option.cpp  option.h  response.cpp  response.h
src/sql_helpers/types/: include.h  int.cpp  int.h  kind.h  text.cpp  text.h
src/sql_support/: CMakeLists.txt  column_list.cpp  column_list.h  column_list_id.h  database_handle.cpp  database_handle.h  database_structure.h  dynamic_query.cpp  dynamic_query.h  dynamic_type.cpp  dynamic_type.h  dynamic_variable.cpp  dynamic_variable.h  query.cpp  query.h  query_data.cpp  query_data.h  query_object.cpp  query_object.h
src/sql_support/column_info/: basic_column_info.h  column_info.cpp  column_info.h
src/sql_support/common/: column_list_id.h  query_result.h  var_list.h
src/sql_support/types/: basic_type.h  bool.h  include.h  int.h  kind.h  text.h
src/sql_support/where_clause/: expression.cpp  expression.h  expression_base.h  expression_string.cpp  expression_string.h  where_clause.cpp  where_clause.h  where_clause_base.h  where_clause_string.cpp  where_clause_string.h
